# benchmark-sortedsearch

./: .gitignore  CMakeLists.txt  Makefile  SortedBlockIndex.cc  SortedBlockIndex.hh  SortedBlockIndex_test.cc  Span.hh  hdr.hh  index.cc  pixi.toml  vec_uar.cc  vec_uar.hh
